tests/ui/borrowck/borrowck-overloaded-index-move-from-vec.stderr
error[E0507]: cannot move out of index of `MyVec<Box<i32>>`
  --> $DIR/borrowck-overloaded-index-move-from-vec.rs:20:15
   |
LL |     let bad = v[0];
   |               ^^^^ move occurs because value has type `Box<i32>`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     let bad = &v[0];
   |               +
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let bad = v[0].clone();
   |                   ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
